springboot-consul/deployments/kubernetes/springboot-consul-connection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-consul
  namespace: dev
  labels:
    app: springboot-consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-consul
  template:
    metadata:
      labels:
        app: springboot-consul
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 2000
        runAsUser: 1001
        runAsGroup: 1001
        supplementalGroups: [ 501 ]
      imagePullSecrets:
        - name: registry-credentials-docker-hub
      containers:
        - name: springboot-consul
          securityContext:
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          image: ravibaka/consul-connection-local-image:dev_001
          ports:
            - name: http
              containerPort: 8088
              protocol: TCP
          resources:
