springboot-consul/deployments/kubernetes/springboot-consul-connection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-consul
  namespace: dev
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
      name: http
  selector:
    app: springboot-consul
